<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="eventDetail"
            type="com.josimar.sicredieventtest.model.Event" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/img_event_detail"
                        imageUrl="@{eventDetail.image}"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="false"
                        android:focusable="false"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_event_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{eventDetail.title}"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/fab_share_detail_event"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_event_detail"
                        tools:text="Titulo do evento" />

                    <TextView
                        android:id="@+id/txt_event_date"
                        formatDate="@{eventDetail.date}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_event_name"
                        tools:text="20/01/2021" />

                    <TextView
                        android:id="@+id/txt_event_price"
                        formatMoney="@{eventDetail.price}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/purple_700"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_event_date"
                        app:layout_constraintEnd_toStartOf="@+id/fab_share_detail_event"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/txt_event_date"
                        app:layout_constraintTop_toTopOf="@+id/txt_event_date"
                        tools:text="R$ 19,80" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_share_detail_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:clickable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_event_name"
                        app:srcCompat="@android:drawable/ic_menu_share" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_content_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_detail">

                <TextView
                    android:id="@+id/txt_event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{eventDetail.description}"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:layout_margin="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_event_date"
                    app:layout_constraintStart_toEndOf="@+id/txt_event_date"
                    app:layout_constraintTop_toTopOf="@+id/txt_event_date"
                    tools:text="Conteudo" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_check_in_detail_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_content_detail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_title_check_in_detail_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/detail_event_title_participants_empty"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Titulo do evento" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_check_in_detail_event_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_check_in_detail_event"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/check_in_detail_event" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_maps_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_check_in_detail_event">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_title_local_detail_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/local_title_participants_empty"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Local" />

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_height="200dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>